First usable version: new class NProcessPool holds a process manager, which can help you run python scripts in batches.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Test
+test.py
+qprocess_bug_minimum_code.py
+todo.md
+config.ini
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
