--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "desktop-helper"
-version = "0.1.0"
+version = "0.1.1"
 authors = [
   { name="Haonan Lin", email="zflinhaonan@gmail.com" },
 ]
@@ -12,9 +12,12 @@ description = "A simple desktop helper for various kinds of tedious jobs on your
 readme = "README.md"
 requires-python = ">=3.7"
 classifiers = [
-    "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
-    "Operating System :: Microsoft :: Windows",
+  "Programming Language :: Python :: 3",
+  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
+  "Operating System :: Microsoft :: Windows",
+]
+dependencies = [
+  "PyQt6 >= 6.4.0",
 ]
 
 [project.urls]
